fluxcd/base/swagger-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: swagger-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swagger-ui
    spec:
      containers:
        - name: swagger-ui
          image: docker.io/swaggerapi/swagger-ui
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 60
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            # ugly frontend stuff
            readOnlyRootFilesystem: false
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: spec
              mountPath: /usr/share/nginx/html/openapi.yaml
              subPath: openapi.yaml
              readOnly: true
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 0
      volumes:
        - name: spec
          configMap:
            name: swagger-ui-spec
