fluxcd/base/swagger-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: swagger-ui
